@@ -1,3 +1,10 @@
+Mon Feb  9 17:35:38 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* win32/win32.c (rb_w32_accept): secure fd before accept because if
+	  error causes in securing, cannot restore the state of accepted
+	  socket.
+	  fixed [ruby-core:19728]
+
 Mon Feb  9 13:42:15 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/win32.c (ifs_open_socket): should retry without proto_buffer
